[package]
name = "dr_ones"
version = "0.1.0"
edition = "2021"

[dependencies]
crossbeam-channel = "0.5.0"
rand = "0.8.5"
wg_2024 = { git = "https://github.com/WGL-2024/WGL_repo_2024.git", features = [
    "serialize",
    "debug",
] }
network_node = { git = "https://github.com/Dr-Ones/common.git" }
